# webgold-website

./: .gitattributes  .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  deps.py  lifespan.py  main.py  models.py  schemas.py  security.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/db/: client.py  init_db.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/integrations/: gold_api_client.py  ip_geo_client.py  razorpay_client.py  reverse_geo_client.py  yahoo_client.py
backend/app/jobs/: fd_maturity_job.py  scheduler.py
backend/app/middlewares/: auth_middleware.py
backend/app/models/: __init__.py  audit.py  fd.py  gold.py  user.py
backend/app/repositories/: audit_repo.py  fd_repo.py  gold_repo.py  user_repo.py
backend/app/routers/: auth.py  fd.py  gold.py  invest.py  portfolio.py  referrals.py  wallet.py
backend/app/schemas/: admin_schema.py  auth_schema.py  fd_schema.py  gold_schema.py  portfolio_schema.py  referral_schema.py  user_schema.py  wallet_schema.py
backend/app/services/: __init__.py  auth_service.py  fd_scheduler.py  fd_service.py  gold_rate.py  gold_service.py  referral.py  referral_service.py  user_service.py  wallet.py  wallet_service.py
backend/app/utils/: helpers.py
backend/scripts/: clear_test_logs.py  create_users.py
backend/tests/: conftest.py  test_fd_payout_math.py  test_gold_rate_markup.py
backend/tests/unit/: test_fd_payout_math.py  (+1 more)
(+210 files in other folders)
